<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/CtoFtextView"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/celsius_to_fahrenheit_converter"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Celsius_Value_editTextNumberSigned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_a_value_to_convert"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CtoFtextView"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/celsius_value_label_TextView"
        android:layout_width="249dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:labelFor="@id/Celsius_Value_editTextNumberSigned"
        android:text="@string/celsius_value"
        app:layout_constraintBottom_toTopOf="@+id/celsius_value_label_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Celsius_Value_editTextNumberSigned"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/celsius_convert_button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:onClick="displayConvertedValue"
        android:text="@string/convert"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Celsius_Value_editTextNumberSigned" />

    <TextView
        android:id="@+id/celsius_converted_value_text_view"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/celsius_convert_button"
        tools:text="32°F" />
</androidx.constraintlayout.widget.ConstraintLayout>