<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FtoCActivity">

    <!--
  //android:labelFor="@id/Celsius_Value_editTextNumberSigned"
  //android:labelFor="@id/fahrenheit_Value_editTextNumberSigned"
  -->


    <TextView
        android:id="@+id/FtoC_Title_TextView"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/fahrenheit_to_celsius_converter"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FtoCEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_a_value_to_convert"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FtoC_Title_TextView" />

    <TextView
        android:id="@+id/fahrenheit_value_label_TextView"
        android:layout_width="249dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:labelFor="@id/fahrenheit_value_label_TextView"
        android:hint="@string/enter_a_value_to_convert"
        android:text="@string/fahrenheit_value"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FtoCEditText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling"
        />

    <Button
        android:id="@+id/fahrenheit_convert_button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"

        android:text="@string/convert"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fahrenheit_value_label_TextView" />

    <TextView
        android:id="@+id/fahrenheit_converted_value_text_view"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fahrenheit_convert_button"
        tools:text="-17.7778°C" />


</androidx.constraintlayout.widget.ConstraintLayout>